Update fitur landing page

--- a/src/css/style5.css
+++ b/src/css/style5.css
@@ -626,7 +626,7 @@
 }
 
 /* ------------------------------------- */
-/* YUK TERHUBUNG LANGSUNG DENGAN KAMI VIA WHATSAPP */
+/* List and checkmark */
 .text-container23 {
   padding: 20px;
   font-family: sans-serif;
